--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bigi": "^1.4.2",
-    "ecurve": "^1.0.6",
+    "axios": "^0.18.0",
     "base-x": "^3.0.4",
-    "decimal.js": "^10.0.1",
+    "bigi": "^1.4.2",
     "crypto-js": "^3.1.9-1",
-    "is": "^3.2.1",
-    "mathjs": "^4.4.2",
+    "decimal.js": "^10.0.1",
+    "ecurve": "^1.0.6",
     "es6-promise": "^4.2.4",
-    "axios": "^0.18.0"
+    "is": "^3.2.1",
+    "mathjs": "^4.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "uglify-js": "^3.3.24",
-    
     "grunt": "^1.0.2",
     "grunt-browserify": "^5.3.0",
-    "grunt-contrib-uglify-es": "^3.3.0"
+    "grunt-contrib-uglify-es": "^3.3.0",
+    "uglify-js": "^3.3.24"
   },
   "keywords": [
     "nkn",
