--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
-  "name": "nknwallet-js-sdk",
-  "version": "0.0.1",
+  "name": "nkn-wallet",
+  "version": "0.1.0",
   "description": "nkn wallet sdk",
-  "main": "index.js",
+  "main": "lib/wallet.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nknorg/nkn-wallet-js.git"
+  },
+  "keywords": [
+    "NKN",
+    "blockchain",
+    "wallet",
+    "js",
+    "sdk"
+  ],
+  "author": "NKN",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/nknorg/nkn-wallet-js/issues"
+  },
+  "homepage": "https://nkn.org",
   "dependencies": {
     "axios": "^0.18.0",
     "base-x": "^3.0.4",
@@ -24,13 +41,5 @@
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-uglify-es": "^3.3.0",
     "uglify-js": "^3.3.24"
-  },
-  "keywords": [
-    "nkn",
-    "wallet",
-    "js",
-    "sdk"
-  ],
-  "author": "nkn.org",
-  "license": "Apache-2.0"
+  }
 }
