--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nkn-wallet",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "nkn wallet sdk",
   "main": "lib/wallet.js",
   "scripts": {
@@ -25,7 +25,7 @@
   "homepage": "https://nkn.org",
   "dependencies": {
     "axios": "^0.18.0",
-    "base-x": "^3.0.4",
+    "base-x": "3.0.4",
     "bigi": "^1.4.2",
     "crypto-js": "^3.1.9-1",
     "decimal.js": "^10.0.1",
