--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nkn-wallet",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "nkn wallet sdk",
   "main": "lib/wallet.js",
   "scripts": {
@@ -24,15 +24,15 @@
   },
   "homepage": "https://nkn.org",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "base-x": "3.0.4",
-    "bigi": "^1.4.2",
-    "crypto-js": "^3.1.9-1",
-    "decimal.js": "^10.0.1",
-    "ecurve": "^1.0.6",
-    "es6-promise": "^4.2.4",
-    "is": "^3.2.1",
-    "mathjs": "^4.4.2"
+    "bigi": "1.4.2",
+    "crypto-js": "3.1.9-1",
+    "decimal.js": "10.0.1",
+    "ecurve": "1.0.6",
+    "es6-promise": "4.2.4",
+    "is": "3.2.1",
+    "mathjs": "4.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
