--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nkn-wallet",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "nkn wallet sdk",
   "main": "lib/wallet.js",
   "scripts": {
@@ -27,12 +27,14 @@
     "axios": "0.18.0",
     "base-x": "3.0.4",
     "bigi": "1.4.2",
+    "buffer": "^5.2.1",
     "crypto-js": "3.1.9-1",
     "decimal.js": "10.0.1",
-    "ecurve": "1.0.6",
     "es6-promise": "4.2.4",
+    "google-protobuf": "^3.7.1",
     "is": "3.2.1",
-    "mathjs": "4.4.2"
+    "mathjs": "4.4.2",
+    "tweetnacl": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
