--- a/package.json
+++ b/package.json
@@ -23,22 +23,35 @@
     "url": "https://github.com/nknorg/nkn-wallet-js/issues"
   },
   "homepage": "https://nkn.org",
+  "browserify": {
+    "transform": [
+      [
+        "browserify-replace",
+        {
+          "replace": [
+            {
+              "from": "require\\('react-native-randombytes'\\)",
+              "to": "{}"
+            }
+          ]
+        }
+      ]
+    ]
+  },
   "dependencies": {
     "axios": "0.18.0",
     "base-x": "3.0.4",
-    "bigi": "1.4.2",
     "buffer": "^5.2.1",
     "crypto-js": "3.1.9-1",
     "decimal.js": "10.0.1",
     "es6-promise": "4.2.4",
     "google-protobuf": "^3.7.1",
     "is": "3.2.1",
-    "mathjs": "4.4.2",
+    "react-native-randombytes": "^3.5.3",
     "tweetnacl": "^1.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "browserify-replace": "^1.0.0",
     "grunt": "^1.0.2",
     "grunt-browserify": "^5.3.0",
     "grunt-contrib-uglify-es": "^3.3.0",
