Remove dependency on react-native-random-bytes
Signed-off-by: Yilun <zyl.skysniper@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         {
           "replace": [
             {
-              "from": "require\\('react-native-randombytes'\\)",
-              "to": "{}"
+              "from": "var global = Function\\('return this'\\)\\(\\);",
+              "to": "var global = (function(){ return this }).call(null);"
             }
           ]
         }
